@@ -1,3 +1,4 @@
+- add no scheduler version
 - don't print STRM log header in append
 - testing search fix
 - add support for multiple emby IP whitelist (, deliminated)
